# orchestrator-x

./: .gitignore  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt-maestro.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: pipeline.py  prompts.py
backend/app/agents/models/: audit.py  extraction.py
backend/app/api/: audit.py  extract.py  jobs.py  models.py
backend/app/core/: __init__.py
backend/app/services/: extractor.py  job_manager.py  provider.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/audit/[id]/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/queue/: page.tsx
frontend/src/components/: AIRecommendations.tsx  AuditDashboard.tsx  AuditForm.tsx  BottleneckList.tsx  ConversionPenalty.tsx  MaturityGauge.tsx  MetricCard.tsx  TechStackBadge.tsx
frontend/src/lib/: api.ts
frontend/src/types/: audit.ts
scripts/: orchestrator-x.desktop  start-dev.sh
